--- a/resumn/index.html
+++ b/resumn/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>简历</title><link rel=icon href=favicon.ico><script defer=defer src=js/runtime.b0d68.js></script><script defer=defer src=js/lib.8b0e4e48.34775.js></script><script defer=defer src=js/lib.0bd0cb86.29da7.js></script><script defer=defer src=js/lib.f483a6a5.0f9e8.js></script><script defer=defer src=js/lib.02b657f6.10209.js></script><script defer=defer src=js/lib.acd59929.fef2a.js></script><script defer=defer src=js/lib.18915d1e.058ec.js></script><script defer=defer src=js/lib.c517c8bd.79ac2.js></script><script defer=defer src=js/lib.8277c174.73a05.js></script><script defer=defer src=js/lib.24a7ec60.67cc6.js></script><script defer=defer src=js/lib.9d0c9c08.6faf4.js></script><script defer=defer src=js/lib.75db6a2b.cc31e.js></script><script defer=defer src=js/lib.f8aa70b6.7ea01.js></script><script defer=defer src=js/main.746bf.js></script><link href=static/css/lib.fdefcb95.89b7b.css rel=stylesheet><link href=static/css/lib.287b8651.17c70.css rel=stylesheet><link href=static/css/lib.70de5e0d.c7d9c.css rel=stylesheet><link href=static/css/lib.f2b67fa0.8897f.css rel=stylesheet><link href=static/css/lib.26d46553.d52c7.css rel=stylesheet><link href=static/css/main.ce8f1.css rel=stylesheet></head><style></style><body><div id=app><div class=item></div><div class=item></div><div class="item basis"></div></div></body><script>class List {
+<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>简历</title><link rel=icon href=favicon.ico><script defer=defer src=js/runtime.dd0d2.js></script><script defer=defer src=js/lib.8b0e4e48.34775.js></script><script defer=defer src=js/lib.0bd0cb86.29da7.js></script><script defer=defer src=js/lib.f483a6a5.0f9e8.js></script><script defer=defer src=js/lib.02b657f6.10209.js></script><script defer=defer src=js/lib.acd59929.fef2a.js></script><script defer=defer src=js/lib.18915d1e.41dec.js></script><script defer=defer src=js/lib.f83fe7dc.35403.js></script><script defer=defer src=js/lib.16f430b9.95d3b.js></script><script defer=defer src=js/lib.0f237248.b0cbf.js></script><script defer=defer src=js/lib.2e2071c2.06a20.js></script><script defer=defer src=js/lib.2fa00dab.bf93d.js></script><script defer=defer src=js/lib.8277c174.73a05.js></script><script defer=defer src=js/lib.75db6a2b.cc31e.js></script><script defer=defer src=js/main.8be68.js></script><link href=static/css/lib.a3363df5.a70b5.css rel=stylesheet><link href=static/css/lib.287b8651.17c70.css rel=stylesheet><link href=static/css/lib.70de5e0d.c7d9c.css rel=stylesheet><link href=static/css/lib.59e22688.6113f.css rel=stylesheet><link href=static/css/lib.522f333a.1b5ab.css rel=stylesheet><link href=static/css/lib.4908886c.9d4cc.css rel=stylesheet><link href=static/css/lib.f2b67fa0.8897f.css rel=stylesheet><link href=static/css/lib.26d46553.d52c7.css rel=stylesheet><link href=static/css/main.e4944.css rel=stylesheet></head><style></style><body><div id=app><div class=item></div><div class=item></div><div class="item basis"></div></div></body><script>class List {
         state = {
             data: [], // 总的数据
             renderList: [], // 当前渲染数据
@@ -166,21 +166,31 @@
                 this.clear()
             }
         }
-    }</script><script>const composePromise = (...fn) => {
-        const first = fn.pop()
-        return (...arg) => {
-            return fn.reverse().reduce(async (a, b) => {
-                const result = await a
-                return b(result)
-            }, Promise.resolve(first(...arg)))
+    }</script><script>const obj = {
+        a: 1,
+        b: {
+            age: {
+                name: '456'
+            }
         }
     }
 
-    function foo() {
-        return new Promise(r => setTimeout(r, 2000))
+    function reactive(obj) {
+        const proxy = new Proxy(obj, {
+            get(target, key, self) {
+                const t = Reflect.get(target, key, self)
+                console.log(key)
+                if (typeof t === 'object') {
+                    return reactive(target[key])
+                }
+                return t
+            }
+        })
+        return proxy
     }
 
-    const next = composePromise(foo, foo, foo)
-    let obj = { a: 1 }
-    console.dir(Object)
-    console.dir(Object.getOwnPropertyDescriptors(obj))</script></html>
+
+    const proxy = reactive(obj)
+
+
+    console.log(proxy.b.age.name)</script></html>
