--- a/test.html
+++ b/test.html
@@ -1855,7 +1855,7 @@
         .suggest-item {
             height: 238px;
             width: 100%;
-            background-size: 100%;
+            background-size: 100% 238px;
             padding: 54px 24px 0 54px;
         }
 
@@ -1987,7 +1987,13 @@
         .capup-level-right-bottom div span{
             font-size: 24px;
         }
-     }
+        .overview-level-card-right{
+        margin-left: 20px;
+        }
+        .contentKey-avgscore{
+            margin-top: 21px !important;
+        }
+    }
 
     .to-top {
         width: 125px;
@@ -2003,6 +2009,7 @@
         width: 100%;
         height: 100%;
     }
+
 
 
 </style>
@@ -4497,9 +4504,9 @@
         `)    
                 if(IsPc){
                     const height = $('.annex:last-child .annex-tbody').height()
-                if (height >= 1090 && contentStatistics.length != (i + 1)) {
-                    appendPage(undefined, '.annex:last-child')
-                }
+                    if (height >= 1090 && contentStatistics.length != (i + 1)) {
+                        appendPage(undefined, '.annex:last-child')
+                    }
                 }
 
             }
@@ -4579,9 +4586,9 @@
 
                 if(IsPc){
                     const height = $('.courseDetail:last-child .courseDetail-content').height()
-                if (height >= 1230 && childList.length != (i + 1)) {
-                    appendCoursePage(undefined, '.courseDetail:last')
-                }
+                    if (height >= 1230 && childList.length != (i + 1)) {
+                       appendCoursePage(undefined, '.courseDetail:last')
+                    }
                 }
             }
         }
@@ -4619,7 +4626,8 @@
                 top:0
             })
          })
-        window.addEventListener('scroll', function () {
+         if(!IsPc){
+            window.addEventListener('scroll', function () {
             const topIcon = $('.to-top')
             if (window.scrollY > 600) {
                 topIcon.css({
@@ -4631,6 +4639,8 @@
                 })
             }
         })
+         }
+       
 
     })
 </script>
